prevent calendar-list container from overflowing

--- a/open_web_calendar/static/css/dhtmlx/style.css
+++ b/open_web_calendar/static/css/dhtmlx/style.css
@@ -422,6 +422,13 @@ div.dhx_agenda_line > span {
     visibility: visible;
 }
 
+
+.calendar-list {
+  overflow-y: auto;
+  max-height: 90%;
+}
+
+
 /* END Burger Menu */
 
 /* Calendar Source Links in Menu */
